--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="img-container"></div>
             <div class="texto">
 
-                <h2>We Are <span class="color-acento">S7 Hard</span></h2>
+                <h2 class="animate__animated animate__zoomInDown">We Are <span class="color-acento">S7 Hard</span></h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos commodi, voluptas incidunt voluptatibus cum, quia neque nulla consequatur laborum accusamus, perspiciatis odio nemo minus vel!</p>
             </div>
         </div>
