agregue animaciones a los titulos en las pages de about me y products

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section id="nuestro-catalogo">
         <div class="container">
-            <h2>Catalogo</h2>
+            <h2 class="animate__animated animate__zoomInDown">Catalogo</h2>
             <div class="catalogo">
                 <div class="carta">
                     <h3>PC GAMER GAMA BAJA</h3>
