--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="shortcut icon" href="../media/favicon-32x32.png">
     <title>Project S7 Hard</title>
@@ -27,7 +28,7 @@
             <div class="img-container"></div>
             <div class="texto">
 
-                <h2>We Are <span class="color-acento">S7 Hard</span></h2>
+                <h2 class="animate__animated animate__zoomInDown">We Are <span class="color-acento">S7 Hard</span></h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos commodi, voluptas incidunt voluptatibus cum, quia neque nulla consequatur laborum accusamus, perspiciatis odio nemo minus vel!</p>
             </div>
         </div>
