--- a/pages/products.html
+++ b/pages/products.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="shortcut icon" href="../media/favicon-32x32.png">
     <title>Project S7 Hard</title>
@@ -24,7 +25,7 @@
     <main>
     <section id="nuestro-catalogo">
         <div class="container">
-            <h2>Catalogo</h2>
+            <h2 class="animate__animated animate__zoomInDown">Catalogo</h2>
             <div class="catalogo">
                 <div class="carta">
                     <h3>PC GAMER GAMA BAJA</h3>
