se modifico a 2 sec las animaciones

--- a/pages/products.html
+++ b/pages/products.html
@@ -25,7 +25,7 @@
     <main>
     <section id="nuestro-catalogo">
         <div class="container">
-            <h2 class="animate__animated animate__zoomInDown">Catalogo</h2>
+            <h2 class="animate__animated animate__bounce animate__repeat-3">Catalogo</h2>
             <div class="catalogo">
                 <div class="carta">
                     <h3>PC GAMER GAMA BAJA</h3>
