--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             <p class="logo">S7 Hard</p>
             <nav>
                 <a href="#hero">Home</a>
-                <a href="#somos-S7Hard">About me</a>
-                <a href="#nuestro-catalogo">Products</a>
-                <a href="#contact-us">Contact</a>
+                <a href="./pages/aboutme.html">About me</a>
+                <a href="./pages/products.html">Products</a>
+                <a href="./pages/contact.html">Contact</a>
             </nav>
         </div>
     </header>
 
     <main>
     <section id="hero">
-        <h1>Encontrá hardware <br>al mejor precio</h1>
+        <h1 class="animate__animated animate__zoomInDown animate__repeat-3">Encontrá hardware <br>al mejor precio</h1>
         <button>Ver Catalogo</button>
     </section>
 
@@ -33,7 +33,7 @@
             <div class="img-container"></div>
             <div class="texto">
 
-                <h2 class="animate__animated animate__zoomInDown">We Are <span class="color-acento">S7 Hard</span></h2>
+                <h2 class="animate__animated animate__zoomInDown animate__repeat-2">We Are <span class="color-acento">S7 Hard</span></h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos commodi, voluptas incidunt voluptatibus cum, quia neque nulla consequatur laborum accusamus, perspiciatis odio nemo minus vel!</p>
             </div>
         </div>
@@ -41,7 +41,7 @@
 
     <section id="nuestro-catalogo">
         <div class="container">
-            <h2 class="animate__animated animate__zoomInDown">Catalogo</h2>
+            <h2 class="animate__animated animate__zoomInDown animate__repeat-3">Catalogo</h2>
             <div class="catalogo">
                 <div class="carta">
                     <h3>PC GAMER GAMA BAJA</h3>
