--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="shortcut icon" href="./media/favicon-32x32.png">
     <title>Project S7 Hard</title>
@@ -25,7 +26,7 @@
     <main>
     <section id="hero">
         <h1 class="animate__animated animate__zoomInDown animate__repeat-3">Encontrá hardware <br>al mejor precio</h1>
-        <button>Ver Catalogo</button>
+        <button class="btn btn-dark">Ver Catalogo</button>
     </section>
 
     <section id="somos-S7Hard">
@@ -60,41 +61,43 @@
                 </div>  
             </div>
         </div>
-    </section>
+      </section>
 
-    <h2 id="contact-us">Form Us</h2>
-    <form action="#" id="contact-form">
-            <div>
-            <label for="Nombre">Completar con el nombre</label>
-            <input type="text" name="nombre" placeholder="Naomi">
-            </div><br>
-    <div>
-            <label for="Apellido">Completar con el apellido</label>
-            <input type="text" name="apellido" placeholder="Glenn">
-    </div><br>
-    <div>
-        <label for="email">Escribe tu email</label>
-        <input type="email" name="email" placeholder="@" required>
-    </div><br>
-    <div>
-        <label for="birth">Fecha de nacimiento</label>
-        <input type="date">
-    </div><br>
-    <div>
-        <label for="sexo">Género</label>
-        <input type="radio" name="sexo" value="mujer">Mujer
-        <input type="radio" name="sexo" value="hombre">Hombre
-        <input type="radio" name="sexo" value="prefiero no decirlo">Prefiero no decirlo
-    </div><br>
-    <div>
-        <label for="mensaje">Envie su Mensaje</label><br>
-        <textarea name="mensaje" id="" cols="30" rows="10"></textarea><br>
-    </div>
-    
-    <div>
-        <input type="submit" value="enviar datos">
-        <input type="reset" value="borrar datos">
-    </div>
+      <div class="row justify-content-center mt-5 pb-5">
+        <h2 id="contact-us">Form Us</h2>
+        <form action="#" id="contact-form">
+                <div>
+                <label for="Nombre">Completar con el nombre</label>
+                <input type="text" name="nombre" placeholder="Naomi">
+                </div><br>
+        <div>
+                <label for="Apellido">Completar con el apellido</label>
+                <input type="text" name="apellido" placeholder="Glenn">
+        </div><br>
+        <div>
+            <label for="email">Escribe tu email</label>
+            <input type="email" name="email" placeholder="@" required>
+        </div><br>
+        <div>
+            <label for="birth">Fecha de nacimiento</label>
+            <input type="date">
+        </div><br>
+        <div>
+            <label for="sexo">Género</label>
+            <input type="radio" name="sexo" value="mujer">Mujer
+            <input type="radio" name="sexo" value="hombre">Hombre
+            <input type="radio" name="sexo" value="prefiero no decirlo">Prefiero no decirlo
+        </div><br>
+        <div>
+            <label for="mensaje">Envie su Mensaje</label><br>
+            <textarea name="mensaje" id="" cols="30" rows="10"></textarea><br>
+        </div>
+        
+        <div>
+            <input class="btn btn-dark" type="submit" value="Enviar Datos">
+            <input class="btn btn-dark" type="reset" value="Borrar">
+        </div>
+          </div>
     </main>
 
     <footer>
@@ -102,5 +105,7 @@
             <p>&copy; S7HARD 2022 - Todos los Derechos Reservados.</p>
         </div>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
